--- a/adausd.html
+++ b/adausd.html
@@ -1,14 +1,14 @@
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div id="tradingview_0906b"></div>
-  <div class="tradingview-widget-copyright"><a href="https://es.tradingview.com/symbols/NASDAQ-AAPL/" rel="noopener" target="_blank"><span class="blue-text">AAPL Gráfico</span></a> por TradingView</div>
+  <div class="tradingview-widget-copyright"><a href="https://es.tradingview.com/symbols/ADABUSD/" rel="noopener" target="_blank"><span class="blue-text">ADA Gráfico</span></a> por TradingView</div>
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <script type="text/javascript">
   new TradingView.widget(
   {
   "width": 980,
   "height": 610,
-  "symbol": "NASDAQ:AAPL",
+  "symbol": "ADABUSD",
   "interval": "D",
   "timezone": "Etc/UTC",
   "theme": "dark",
